syntax = "proto3"; // 指定proto版本
package notice;     // 指定默认包名

option go_package = "/notice";

service Noticeservice {
    rpc SendEmail(SendEmailReq) returns (SendEmailResp) {}
}

message RespBody {
    int32 code = 1;
    string resp_msg = 2;
}

// 发送注册验证码邮件
message SendEmailReq {
    string user_email = 1;
    string content = 2;
}

message SendEmailResp {
    RespBody resp = 1;
}